--- a/index.css
+++ b/index.css
@@ -3,24 +3,23 @@ div.circle {
   height: 80%;
   border: solid thin #303030;
   border-radius: 50%;
-  animation: wave 2s infinite;
   position: absolute;
 }
 
 div.circle.layer-0 {
-  animation-delay: 0s;
+  animation: wave-0 2s infinite;
 }
 div.circle.layer-1 {
-  animation-delay: 0.2s;
+  animation: wave-1 2s infinite;
 }
 div.circle.layer-2 {
-  animation-delay: 0.4s;
+  animation: wave-2 2s infinite;
 }
 div.circle.layer-3 {
-  animation-delay: 0.6s;
+  animation: wave-3 2s infinite;
 }
 
-@keyframes wave {
+@keyframes wave-0 {
   from {
     width:  0%;
     height: 0%;
@@ -29,6 +28,45 @@ div.circle.layer-3 {
   to {
     width:  100%;
     height: 100%;
+    opacity:   0;
+  }
+}
+
+@keyframes wave-1 {
+  from {
+    width:  0%;
+    height: 0%;
+    box-shadow: 0 0 100px inset #3f3f3f;
+  }
+  to {
+    width:   90%;
+    height:  90%;
+    opacity:   0;
+  }
+}
+
+@keyframes wave-2 {
+  from {
+    width:  0%;
+    height: 0%;
+    box-shadow: 0 0 100px inset #3f3f3f;
+  }
+  to {
+    width:   75%;
+    height:  75%;
+    opacity:   0;
+  }
+}
+
+@keyframes wave-3 {
+  from {
+    width:  0%;
+    height: 0%;
+    box-shadow: 0 0 100px inset #3f3f3f;
+  }
+  to {
+    width:   50%;
+    height:  50%;
     opacity:   0;
   }
 }
