--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 div.circle {
   width:  80%;
   height: 80%;
-  border: solid thin #303030;
+  border: solid thick #d0d0ff;
   border-radius: 50%;
   position: absolute;
 }
@@ -23,7 +23,7 @@ div.circle.layer-3 {
   from {
     width:  0%;
     height: 0%;
-    box-shadow: 0 0 100px inset #3f3f3f;
+    box-shadow: 0 0 100px inset #d0d0ff;
   }
   to {
     width:  100%;
@@ -36,7 +36,7 @@ div.circle.layer-3 {
   from {
     width:  0%;
     height: 0%;
-    box-shadow: 0 0 100px inset #3f3f3f;
+    box-shadow: 0 0 100px inset #d0d0ff;
   }
   to {
     width:   90%;
@@ -49,7 +49,7 @@ div.circle.layer-3 {
   from {
     width:  0%;
     height: 0%;
-    box-shadow: 0 0 100px inset #3f3f3f;
+    box-shadow: 0 0 100px inset #d0d0ff;
   }
   to {
     width:   75%;
@@ -62,7 +62,7 @@ div.circle.layer-3 {
   from {
     width:  0%;
     height: 0%;
-    box-shadow: 0 0 100px inset #3f3f3f;
+    box-shadow: 0 0 100px inset #d0d0ff;
   }
   to {
     width:   50%;
