--- a/index.css
+++ b/index.css
@@ -20,53 +20,97 @@ div.circle.layer-3 {
 }
 
 @keyframes wave-0 {
-  from {
+  0% {
     width:  0%;
     height: 0%;
     box-shadow: 0 0 100px inset #d0d0ff;
+    transform: none;
   }
-  to {
+  6% {
+    transform: translateY(20%);
+  }
+  8% {
+    transform: translateY(-20%);
+  }
+  16% {
+    transform: translateY(10%);
+  }
+  100% {
     width:  100%;
     height: 100%;
     opacity:   0;
+    transform: none;
   }
 }
 
 @keyframes wave-1 {
-  from {
+  0% {
     width:  0%;
     height: 0%;
     box-shadow: 0 0 100px inset #d0d0ff;
+    transform: none;
   }
-  to {
+  8% {
+    transform: translateY(20%);
+  }
+  12% {
+    transform: translateY(-20%);
+  }
+  24% {
+    transform: translateY(10%);
+  }
+  100% {
     width:   90%;
     height:  90%;
     opacity:   0;
+    transform: none;
   }
 }
 
 @keyframes wave-2 {
-  from {
+  0% {
     width:  0%;
     height: 0%;
     box-shadow: 0 0 100px inset #d0d0ff;
+    transform: none;
   }
-  to {
+  10% {
+    transform: translateY(20%);
+  }
+  16% {
+    transform: translateY(-20%);
+  }
+  32% {
+    transform: translateY(10%);
+  }
+  100% {
     width:   75%;
     height:  75%;
     opacity:   0;
+    transform: none;
   }
 }
 
 @keyframes wave-3 {
-  from {
+  0% {
     width:  0%;
     height: 0%;
     box-shadow: 0 0 100px inset #d0d0ff;
+    transform: none;
   }
-  to {
+  10% {
+    transform: translateY(20%);
+  }
+  20% {
+    transform: translateY(-20%);
+  }
+  40% {
+    transform: translateY(10%);
+  }
+  100% {
     width:   50%;
     height:  50%;
     opacity:   0;
+    transform: none;
   }
 }
