--- a/index.css
+++ b/index.css
@@ -1,3 +1,25 @@
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  background-color: #f0f0f0;
+}
+.container {
+  height: 100%;
+  display: flex;
+  align-items:     center;
+  justify-content: center;
+}
+.box {
+  width:  50vw;
+  height: 10vw;
+  border: dotted thin #b0b0b0;
+  display: flex;
+  align-items:     center;
+  justify-content: center;
+  position: relative;
+}
+
 div.circle {
   width:  80%;
   height: 80%;
